@@ -1,5 +1,5 @@
 from odoo import _, api, fields, models
-from odoo.exceptions import ValidationError
+from odoo.exceptions import ValidationError,Warning
 from num2words import num2words
 import math
 from odoo.tools.float_utils import float_round
@@ -16,9 +16,12 @@ class PaymentVoucherReportQWeb(models.AbstractModel):
     @api.model
     def _get_report_values(self, docids, data=None):
         payment_ids = self.env['account.payment'].browse(docids)
+        print('===============payment_ids===============',payment_ids)
         word = {}
         sum=0
         for payment_id in payment_ids:
+            if payment_id.state == 'draft':
+                raise Warning(_('You cannot take the print on Draft payment'))
             if payment_id.method_type=='advance':
                 if payment_id.payment_entries():
                     for payment in payment_id.payment_entries():
