@@ -1,3 +1,6 @@
+08/06/2022 v 1.6 Neha
+	* [ZB-8834] Restriction on Payment Voucher and check Printing (Draft)
+
 10/02/2022 v 1.5 Neha
 	* [ZB-7807] Cheque Printing
 
